--- a/site-content/content/report_tsla_2024-12-13.html
+++ b/site-content/content/report_tsla_2024-12-13.html
@@ -1,5 +1,5 @@
 ---
-title: "Backtest Report for TSLA on 2024-12-13"
+title: "Backtest Report : TSLA 2024-12-13"
 date: 2024-12-13
 ---
 <h1>Backtest Report</h1>
