--- a/site-content/content/report_btc-usd_2024-12-13.html
+++ b/site-content/content/report_btc-usd_2024-12-13.html
@@ -1,3 +1,8 @@
+---
+title: "Backtest Report : BTC-USD 2024-12-13"
+date: 2024-12-13
+---
+
 <h1>Backtest Report</h1>
 <ul>
 <li>Ticker : BTC-USD</li>
